Working on Auth Swagger
